@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#22450] Add level filter to admin categories view. Thanks Andrew and Christophe.
  $ Changed figures to strings in Menu items manager maxlevels filter
  # [#22427] Module Manager: Modules - Module Filter Only Lists "Administrator Menu" at times. Thanks Michael.
+ # [#22440] default module positions. Thanks Christophe.
  
 15-Sep-2010 Andrew Eddie
  # Fixed issue [#22125] We don't have CSS for system "warning" messages (Artyom Bisyarin, Elin Waring).
